emoji-translator/03_service_emoji.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emoji-translator
  name: emoji-translator
  namespace: emoji-translator
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: emoji-translator
  type: NodePort
