emoji-translator/04_ingress_emoji.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-emoji-translator
  namespace: emoji-translator
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - danielbeltejar.es
      secretName: letsencrypt
  rules:
  - host: danielbeltejar.es
    http:
      paths:
      - path: /traductor
        pathType: Prefix
        backend:
          service:
            name: emoji-translator
            port: 
              number: 8000
      - path: /realtime
        pathType: Prefix
        backend:
          service:
            name: emoji-translator
            port: 
              number: 8000
